# aws_public_blockchain_analysis_athena_pyspark

./: README.html  README.md
.github/: copilot-instructions.md
athena_blockchain/: athena_blockchain.ipynb  expensive_failed_txs_last7days.csv  gas_price_analysis_last7days.csv  main.py  pyproject.toml  top_contract_deployers_last30days.csv
pyspark_blockchain/: block_producer_analysis.json  feature_correlation_analysis.json  gas_price_statistics.json  main.py  network_congestion_by_time_of_day.json  pyproject.toml  pyspark_blockchain_analysis.ipynb  token_transfer_analysis.json  transaction_failure_analysis.json  whale_analytics.json
pyspark_blockchain/blockchain_data/: contract_deployment_trends_last30days.csv  daily_network_activity_last30days.csv  network_congestion_patterns_last7days.csv  network_overview.csv  top_block_producers_last7days.csv  top_contracts_by_interaction_last30days.csv  top_token_transfers_last7days.csv  top_whale_wallets_last7days.csv  tx_success_analysis_last30days.csv
