[project]
name = "pyspark-blockain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark>=3.5.0",
    "boto3>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "awscli>=1.42.35",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "networkx>=3.1",
    "openpyxl>=3.1.0",
    "pyarrow>=13.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.ipynb",
    "*.py",
    "*.md",
    "*.csv",
    "*.txt",
]
